--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,15 @@ dependencies:
   fluent_appbar: ^2.0.0
   splashscreen: ^1.3.5
   circular_menu: ^1.2.2
+  font_awesome_flutter: ^9.1.0
+  flutter_mobx: ^2.0.0
+  mobx: ^2.0.1
 
 dev_dependencies:
+  build_runner: ^2.0.5
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^2.0.1+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,9 +53,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/img35.jpg
+    - assets/grupo_arroz.jpg
+    - assets/grupo_feijao.jpg
+    - assets/grupo_vegetaisc.jpg
+    - assets/grupo_frutasa.jpg
+    - assets/grupo_frutasb.jpg
+    - assets/grupo_frutasc.jpg
+    - assets/grupo_paes_cereais.jpg
+    - assets/grupo_carnes.jpg
+    - grupo_doces.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
